# react-native-audio-stream

./: .eslintrc.js  .gitignore  .npmignore  .prettierrc.js  .release-it.json  .yarnrc  ANDROID_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEDIA3_MIGRATION.md  MEDIA3_MIGRATION_SCRIPT.sh  README.md  REALTIME_STREAMING.md  TESTING.md  USAGE.md  complete-example.js  elevenlabs-chunk-streaming.js  elevenlabs-direct-example.js  elevenlabs-memory-example.js  elevenlabs-streaming-example.js  elevenlabs-streaming-fixed.js  elevenlabs-streaming.js  elevenlabs-working-stream.js  example-streaming.js  jest.config.js  jest.setup.js  memory-streaming-example.js  mustafakarali-react-native-audio-stream-1.0.1.tgz  package-lock.json  package.json  quick-test.js  react-native-audio-stream.podspec  simple-elevenlabs-example.js  simple-usage.js  test-elevenlabs.js  tsconfig.build.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
android/: build.gradle  gradle.properties
android/src/main/jni/: Android.mk  CMakeLists.txt  RNAudioStreamSpec.cpp  RNAudioStreamSpec.h
docs/: API.md  EXAMPLES.md  IOS_SETUP.md
example/: App.tsx  app.json  metro.config.js  package.json  tsconfig.json
examples/BufferDemo/: App.tsx  README.md  package.json
ios/: RNAudioStream.h  RNAudioStream.m
scripts/: bootstrap.js
src/: AudioStream.ts  AudioStream.ts.bak  MemoryStreaming.ts  NativeAudioStream.ts  index.d.ts  index.ts  logger.ts  types.ts
src/__tests__/: AudioStream.test.ts
(+9 files in other folders)
